# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xnuV3wwPOcJG8rQbsPBbR0Yme9wpHoOAIQko-LZVs2tw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1gEr-64SJwwsVhEw1CWjssRwBUwW54FdhkNwhfMqKQag=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1wjwx7IUseZnwG1rbu8q_rg0qd18OT3Ddd8F05JnRI14=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16x4CpgrQFnN_geqwfZodjhw1KL7-qf5nCf8x82ClxLgm8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x15apSG3hSwawZaTCUKMvIOdSWIkwdnX1EiinmM9PyWkM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1fGOqSPd_hidqCmtgaeHZRFYsn3GBfeh22fekvUOsLTM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT18kE2FstY7iaiI_QazMXegXor9nNWG_iW-TNP29cCO-8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2E_KGyqdVRgG7EVsvlFRLp450x4oc_rDIy2I1a1NGxdc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2QIeTG3sgP-UdLc_JsSzIbY9oEQhZ5NXK5_do1jV0kDo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2Qlm2GNiRWU0O8oYiRkkt1jFWLhoca7NusVKyPHkAXps=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2sPz_MaXFLBrOQBDUuKPuqUrLbxWLi8z8bAMssZ-IrCg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2spe6gKQF25BwZ1Kg_2JXuUjh_oWTc8VYNcW9O-1tNUg=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1b4aWal_vgJJx16-8yDerFKICMzRWaOVn64XKPLQr5gw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1f7mnn7BiGwCIPxrbiw96zzzT-sfG1UpNKEo3Kvn_7YM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1kfd3eMS15N99s1j-3FiedPQahYsZynLWpCD6Ba-QNmE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1qCKP80b5TYxC08S-n9vE9GXc0xcjhSXdCejJFVM-ofI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1rTrExRHY6t9A-au7aU1zPRdrlKv4lMfSQfiQXc5ilec=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1uW9CpDPHdpN6VGZminv8WGnRMLiCEyBQQfGAlgn1gPA=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1yt5_5vBNvrhX6IdZnxHhrpBSKF922lzQPrk9kHPVxBk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64HkNwa2Lw8ZbqNILySIiTxvrPeGqPM1Uh8arIBKiZYo4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64NXv2RAjhtg0sF3BmOdPnCQSeLTLNKN4DT3bWS2-FGUk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1NKUujJ9Z-go-UbGE2S669SnyFdy0U9-tF-JYcX1X9As=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1a4AH93mLAPG3QynN5l2zpi0rkICPY9qIgMXl7LPXou0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1fqbUOgW6q2w72D4MRMe3lK83WqPVSfinUZwJyJowDw0=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_vHdQPWlL_hK43nIUHOXBakGoo9Zjx7-REC7rOqKvrLU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_wSxebkBl6aplCBHIXlGiqyP00KfLhLMsCwbiHBkDmsk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_xxaNljP9O4sNuF-z0IWJi0XXuipvcSf20BMDcn28qoI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32B-DOCNv8DTvKE2rFX6oo8iN-8Z7eqNrSq5rJ1urLTZQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32JzQ0OibnRDHhQI5M07rrySXhHq4yo4nT409XiNKHwgY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32s7P4ONh0MmX_0NajtIkLx0JznfTe9B3nZRCeJY8Z_xA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32sMJIflWMp3BEB68nE91Rz6O2q5hAFBmC6-Oyo1dTivQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xMVi5fVll_FrFEbBCPwYsEWKWTrKWfvjZrzSrXanLMuE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xyGLXjAfYFkTXrj0QrYS_MMywIgrD00yY1w6n-fIzWZY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT11AxLgtBDCL5R0SZgJBk1-LKCyEaK0U8xcLkhFdmGiBY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT15lf9IQHmULAzQXTYnCbro_m5xXaAuncEg2uta8PlIVo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT16YkjcxRf5tnhdrkZX8_dYnlh7jaRaS1moRdrrsT9h4Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1AeFV_-AorhVgeu64GCp48rKoCFrvT4sGSZn4h8QeliM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1b2DyAoRq_edG5NJvEKT-fmus2RjlTabgU17IApQ8dUw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1evNe_2DaVrI-jSDxGSg9OYtXWpZET-kMc2xejKCBM9A=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1YJzH0-_i4FfI1zHClwXMnLgqpSMSF-kufyii8eGPySg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1vVSwK_LkTaXKig36ZbT9twDkAN6DuoMWycl170UoL90=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3bwHj1FiSyR6yeOAEQUI8G4TS9Cdd5lg9jvVPCtfuyEY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3wNnmFnKB-opHR--fjPshh_zsc1Kt3ey84ujRwlL5jFs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4Q0vBP3g29-WmPYhyoaOjQ_ZbMJmK2U329raXbazPN4o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4wWGXmy7vKbWkKy0xLO6Ol85R981ofCgauwLuefqRjK8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16vOVUv5_nhy2zzumVpVFSJUoYxjW0D-V0nfuHx_VD3vQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16sduPrbPgyR3T3tRN7uWzjNiByBuiF8dPXUYzumTdLD8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x163oZV4YoYkGq8svwBfwS3kmAFsmy4Cm_shLI1c81tQ9M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16VU36hKbkkGIi0EDIDWNEg556ufOH8lSJxP8HOaCRG88=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16GlfDYrsW5sgfEktdvQRzngR0e17zw9XHs4XG7k57ANw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x167DmkbOFy38wCZYZpBBLBhhN56VB4UTDUWYoO5jqw2QY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16femWGZxobETra0_LGTo7M5GH0hsvjkTUuGaoWim_dms=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x165JahRjQl9uSqHowhv-t7kr4e3v5-VyWsTcmMHPhNV0Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16awnap5QlT4Oq6aeIf4u_9A2mAFV_ND1f8cAr-yMiYUY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16kYKkiQDIMp3MJ8dTFI1B14ljEPn468gW3bJ6u5GLLP4=',
      'err': 0,
    }),
  ])
# ---
